spec/hecate/core/renderer/__snapshots__/tty/no_color.snap
error: undefined variable 'error'
  --> nocolor.cr:1:9
  |
1 | let x = error;
  |         ^^^^^ not defined
  |
